continue writing tutorial

--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <head>
+  <title>Angular Unit Testing</title>
+  <script src="build.js"></script>
   <meta charset="utf-8">
 </head>
-<body>
-  <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.2.17/angular.min.js"></script>
+<body ng-app="angular-unit-testing">
+  <login></login>
 </body>
-
-
